# VulkanRenderer2D

./: CMakeLists.txt  Level.h  main.cpp
Assets/Maps/: Level1.fecmap  Level2.fecmap
Assets/Shaders/: shader.frag  shader.vert  vert.spv
Assets/Shaders/Circle/: circle_frag.spv  circle_shader.frag  circle_shader.vert  circle_vert.spv  compile.bat
Assets/Shaders/Rectangles/: compile.bat  rectangle_frag.spv  rectangle_shader.frag  rectangle_shader.vert  rectangle_vert.spv
Assets/Sprites/: barrel.kra  blob.kra  blob.kra~  blob.png~  chest.kra  chest.kra~  hut.kra  hut.kra~  hut.png~  sword.kra
Assets/Textures/: avatar_frame.kra  gravel_road.png~  textures.atlas
Core/: AnimationData.h  AnimationSystem.cpp  AnimationSystem.h  Animator.cpp  Animator.h  BaseTypes.h  Camera.cpp  Camera.h  Editor.cpp  Editor.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Input.cpp  Input.h  Map.cpp  Map.h  MapSerializer.h  Mesh.cpp  Mesh.h  MeshLoader.cpp  MeshLoader.h  Sprite.h  SpriteFrame.h  TextureAtlasParser.h  TextureAtlasStructures.h  Tile.cpp  Tile.h  TileTypes.h  Timestep.h  UiRectangle.h  Vertex.h  ViewFrustrum.h  WindowContext.h  World.cpp  World.h
Rendering/: Buffer.cpp  Buffer.h  CMakeLists.txt  CameraConstants.h  CameraUniformData.h  Circle.h  Descriptors.h  DrawRequest.h  IGenericBuffer.h  ImageLoader.h  ImageRect.h  Instance.h  InstanceData.h  Material.h  ObjectBuffer.h  ObjectPushConstants.h  Pipeline.cpp  Pipeline.h  Sampler.h  Shader.cpp  Shader.h  SpriteRenderData.h  Swapchain.cpp  Swapchain.h  SwapchainElement.h  Texture2D.cpp  Texture2D.h  UniformBufferObject.h  Vertex.h  VulkanHelpers.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanResources.cpp  VulkanResources.h  VulkanRessources.cpp  VulkanRessources.h  VulkanWindow.cpp  VulkanWindow.h
Shaders/: frag.spv  shader.frag  shader.vert  vert.spv
include/imgui/backends/: imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
include/stb/: CMakeLists.txt  stb_image.cpp
